# mzdb-rs

./: .gitignore  Cargo.toml  README.md  caroline_notes.txt
mzdb-rs/: Cargo.toml
mzdb-rs/benches/: mzdb_bench.rs
mzdb-rs/data/: xml_schemata.tsv
mzdb-rs/src/: anyhow_ext.rs  bb_iterator_v1.rs  cache.rs  chromatogram.rs  iterator.rs  lib.rs  main.rs  metadata.rs  model.rs  mzdb.rs  queries.rs  queries_extended.rs  query_utils.rs  rtree.rs  test.rs  xml.rs
mzdb-rs/src/writer/: bounding_box.rs  data_encoding.rs  metadata.rs  mod.rs  run_slice.rs  schema.rs  spectrum_writer.rs
mzdb-rs/tests/: extended_tests.rs  integration_tests.rs
pymzdb/: Cargo.toml  export_spectrum_as_png.py  pyproject.toml  test_me.py
pymzdb/src/: lib.rs
rmzdb/: DESCRIPTION  NAMESPACE  test_me.R
rmzdb/R/: extendr-wrappers.R
rmzdb/src/: Makevars  Makevars.win  entrypoint.c
rmzdb/src/rust/: Cargo.toml
rmzdb/src/rust/src/: lib.rs  reader.rs  sqlite_helper.rs
