[package]
name = "mzdb-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
#byteorder = "1.4.3"
itertools = "0.13.0"
rusqlite = { version = "0.32.1", features = ["blob","bundled"] }
log = "0.4.17"
roxmltree = "0.20.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_rusqlite = "0.36.0"
serde_with = "3.11.0"
simple-logging = "2.0.2"
strum_macros = "0.26.4"

### FOR DATA PROCESSING ONLY ###
bincode = "1.3.3"
#linecount = "0.1.0"
#bytecount = "0.6.3"
csv = "1.1.6"
ordered-float = "3.4.0"
rstar = "0.11.0"
#fitting = "0.4.2"

[[bin]]
name = "mzdb_sandbox"
path = "src/main.rs"

[lib]
name = "mzdb"
path = "src/lib.rs"
crate-type = ["lib"]


