[package]
name = "mzdb-rs"
version = "0.3.0"
edition = "2024"
description = "A Rust library for reading mzDB mass spectrometry files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mzdb/mzdb-rs"
keywords = ["mass-spectrometry", "mzdb", "proteomics", "bioinformatics"]
categories = ["science", "database"]

[dependencies]
anyhow = "1.0"
anyhow_ext = "0.2"
bytes = "1.5"
fallible-iterator = "0.3"
itertools = "0.13"
rusqlite = { version = "0.32", features = ["blob", "bundled"] }
log = "0.4"
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_rusqlite = "0.36"
serde_with = "3.11"
strum_macros = "0.26"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "mzdb_bench"
harness = false

[[bin]]
name = "mzdb_sandbox"
path = "src/main.rs"

[lib]
name = "mzdb"
path = "src/lib.rs"
crate-type = ["lib"]
