[package]
name = "pymzdb"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pymzdb"
crate-type = ["cdylib"] # ["cdylib", "lib"]

[dependencies]
anyhow = "1.0.57"
mzdb-rs = { path = "../mzdb-rs" }
pyo3 = { version = "0.22.6", features = ["anyhow", "extension-module"] }
rusqlite = { version = "0.32.1" } # , features = ["blob","bundled"]